--- a/package.json
+++ b/package.json
@@ -14,11 +14,10 @@
   "license": "ISC",
   "bugs": {},
   "homepage": "",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
-    "@babel/core": "^7.10.2",
-    "@babel/preset-env": "^7.10.2",
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
     "@types/gulp": "^4.0.6",
     "@types/gulp-sass": "^4.0.0",
     "babel-loader": "^8.1.0",
@@ -29,11 +28,11 @@
     "gulp-plumber": "^1.2.1",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
-    "ts-loader": "^7.0.5",
-    "typescript": "^3.9.5",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-stream": "^5.2.1"
+    "ts-loader": "^8.0.4",
+    "typescript": "^4.0.3",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12",
+    "webpack-stream": "^6.1.0"
   },
   "browserslist": [
     "defaults",
